Adjust the Android fullscreen hack:  - avoid setting a size on the body.  It doesn't always work: sometimes things only  seemed to work because being scrolled down forced the body size up, and not the actual  body size we specified, so if we got scrolled up somehow the window would resize down  from under us.  Instead, put the whole page in a div and size that instead.  This also  means we don't have to turn overflow: hidden off and on when running the size check;  just put the padding div (this.padding) outside of #sizing-body.  - On Android 2.1, delay a bit before running the initial resize to work around a strange  browser bug.  - stop() the resize event when we're running, and then (because for some reason it's not  cancellable) check event.stopped from the listeners, so we don't keep resizing the contents  during the resize phase.
--HG--
branch : moe
extra : convert_revision : svn%3A2d28d66d-8d94-df11-8c86-00306ef368cb/trunk/moe%40755

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -29,7 +29,6 @@ body.not-member .member-only { display: none !important; }
 }
 .action-post-browse > body {
   background: #000;
-  overflow: hidden;
   padding: 0;
 }
 
@@ -1428,6 +1427,10 @@ span.stars .star-3 { color:#ff0; }
 }
 .del-mode > label {
   font-weight: normal;
+}
+
+#sizing-body {
+  overflow: hidden;
 }
 
 .post-browser {
